fixed readability on background image

--- a/WebVisualizations/assets/styles.css
+++ b/WebVisualizations/assets/styles.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: #ebecf1;
-  background-image: url("../resources/bg.jpg");
+  background-image: url("../resources/pexels-jakub-novacek-924824.jpg");
 }
 
 a {
